--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8000
-MONGODB_URI= mongodb+srv://<sachinandan_06>:<Nandan1122>@sachinandan.zclqmnh.mongodb.net/
+MONGODB_URI=mongodb+srv://sachinandan2121:Nandan1234@cluster0.0gdy8v6.mongodb.net
